[package]
name = "deposit-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0", features = ["full"] }
alloy-primitives = "1.2"
alloy-rpc-types-engine = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.46", features = ["full"] }

# Commonware dependencies
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }

# Summit types from GitHub
summit-types = { git = "https://github.com/SeismicSystems/summit", branch = "m/upgrade-commonware-0.0.63" }

[[bin]]
name = "deposit-cli"
path = "src/main.rs"
